[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://UI/RectSlide.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bg:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bg:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HorizontalRects:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "curtain_vertical_in"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_horizontal_bars_in"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HorizontalRects:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bg:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "curtain_vertical_out"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_horizontal_bars_out"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HorizontalRects:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bg:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Bg:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Bg:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "slide_left_out"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Bg:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -256, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "slide_right_in"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Bg:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -256, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StageName/StageNumberLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StageName/StageNameLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 112 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "show_stage_name"
length = 3.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("StageName/StageNumberLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 2.75, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -128, 100 ), Vector2( 64, 100 ), Vector2( 64, 100 ), Vector2( 256, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StageName/StageNameLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75, 2.75, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 112 ), Vector2( 64, 112 ), Vector2( 64, 112 ), Vector2( -128, 112 ) ]
}

[node name="SceneManager" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 224.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/curtain_vertical_in = SubResource( 6 )
anims/curtain_vertical_out = SubResource( 7 )
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 4 )
anims/slide_left_out = SubResource( 2 )
anims/slide_right_in = SubResource( 3 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HorizontalRects" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1

[node name="RectSlide" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_right = 256.0
color = Color( 0, 0, 0, 1 )

[node name="RectSlide2" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_top = 32.0
margin_right = 256.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )

[node name="RectSlide3" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 96.0
color = Color( 0, 0, 0, 1 )

[node name="RectSlide4" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_top = 96.0
margin_right = 256.0
margin_bottom = 128.0
color = Color( 0, 0, 0, 1 )

[node name="RectSlide5" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 256.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 1 )

[node name="RectSlide6" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_top = 160.0
margin_right = 256.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )

[node name="RectSlide7" parent="HorizontalRects" instance=ExtResource( 2 )]
margin_top = 192.0
margin_right = 256.0
margin_bottom = 224.0
color = Color( 0, 0, 0, 1 )

[node name="StageName" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="StageNumberLabel" type="Label" parent="StageName"]
unique_name_in_owner = true
margin_left = 64.0
margin_top = 100.0
margin_right = 192.0
margin_bottom = 112.0
rect_min_size = Vector2( 64, 12 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.290196, 0.792157, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "STAGE 1"
align = 1
valign = 1

[node name="StageNameLabel" type="Label" parent="StageName"]
unique_name_in_owner = true
margin_left = 64.0
margin_top = 112.0
margin_right = 192.0
margin_bottom = 124.0
rect_min_size = Vector2( 64, 12 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.290196, 0.792157, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "FOREST"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="StageName"]
visible = false
margin_right = 256.0
margin_bottom = 224.0

[node name="StageNameLabel3" type="Label" parent="StageName/CenterContainer"]
margin_left = 96.0
margin_top = 106.0
margin_right = 160.0
margin_bottom = 118.0
rect_min_size = Vector2( 64, 12 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.290196, 0.792157, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "STAGE 1"
align = 1
valign = 1

[node name="StageAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/show_stage_name = SubResource( 9 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
